video previews are hidden until vids are loaded. Prevents flickering

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Upload video</h1>
   <label for="fileUpload"></label>
   <input type="file" accept="video/*" id="fileUpload">
-  <div class="container">
+  <div class="container" id="video-containers">
     <div>
       <h2>Original</h2>
       <video id="video-player" controls></video>
