--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Video Editor</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <!-- Import libraries -->
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+
+  <!-- Import tools -->
+  <script src="tools/tooling.js"></script>
+  <script src="tools/grayscale.js"></script>
+
   <script src="pipeline.js"></script>
   <script src="main.js"></script>
-  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <h1>Upload video</h1>
