--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <meta charset="UTF-8">
   <title>Video Editor</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
   <!-- Import tools -->
   <script src="tools/tooling.js"></script>
   <script src="tools/grayscale.js"></script>
+  <script src="tools/seamCarve.js"></script>
 
   <script src="pipeline.js"></script>
   <script src="main.js"></script>
