seam carving works! But SUPER slow.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Import tools -->
   <script src="tools/tooling.js"></script>
   <script src="tools/grayscale.js"></script>
-  <script src="tools/seamCarve.js"></script>
+  <script src="tools/seamCarve/seamCarve.js"></script>
 
   <script src="pipeline.js"></script>
   <script src="main.js"></script>
