helper wrapper for working with image data. I think this actually might cause performance problems though...

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
   <!-- Import tools -->
+  <script src="webImage.js"></script>
+
   <script src="tools/tooling.js"></script>
   <script src="tools/grayscale.js"></script>
+  <script src="tools/scale.js"></script>
   <script src="tools/seamCarve/seamCarve.js"></script>
 
   <script src="pipeline.js"></script>
