--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <title>Video Editor</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
+  <script src="libs/promise-7.0.4.min.js"></script>
 
   <!-- Import tools -->
   <script src="webImage.js"></script>
@@ -11,12 +11,15 @@
   <script src="tools/tooling.js"></script>
   <script src="tools/grayscale.js"></script>
   <script src="tools/seamCarve/seamCarve.js"></script>
+  <script src="tools/pipe.js"></script>
 
   <script src="pipeline.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
-  <h1>Upload video</h1>
+  <div class="navbar">
+    <h1 class="navbar__title">Upload video</h1>
+  </div>
   <label for="fileUpload"></label>
   <input type="file" accept="video/*" id="fileUpload">
   <div class="container" id="video-containers">
@@ -26,7 +29,31 @@
     </div>
     <div>
       <h2>Enhancements</h2>
-      <canvas id="video-preview"></canvas>
+      <div class="preview">
+        <canvas id="video-preview"></canvas>
+        <div class="preview__buttons">
+          <div>
+            <label for="grayscale-chkbox">
+              <input type="checkbox" id="grayscale-chkbox"> Grayscale
+            </label>
+          </div>
+          <div>
+            <label for="carve-chkbox">
+              <input type="checkbox" id="carve-chkbox"> Carve
+            </label>
+          </div>
+          <div>
+            Preview at
+            <select id="select-resolution">
+              <option value="0.25">1/4</option>
+              <option value="0.5">1/2</option>
+              <option value="0.75">3/4</option>
+              <option value="1" selected="selected">full</option>
+            </select>
+            resolution
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
