working on socket stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <script src="libs/promise-7.0.4.min.js"></script>
 
   <!-- Import tools -->
+  <!-- <script src="/socket.io/socket.io.js"></script> -->
   <script src="webImage.js"></script>
 
   <script src="tools/tooling.js"></script>
