added grayscale and downlaod

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
             resolution
           </div>
         </div>
+        <a href="./uploads/outputvid/output.mp4" download="output.mp4">Download</a>
       </div>
     </div>
   </div>
