download video works

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             resolution
           </div>
         </div>
-        <a href="./uploads/outputvid/output.mp4" download="output.mp4">Download</a>
+<a href="/uploads/outputvid/output.mp4" download><button> Download </button></a>
       </div>
     </div>
   </div>
