fixed some css and video upload directory location

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
   <div class="navbar">
-    <h1 class="navbar__title">Upload video</h1>
+    <h1 class="navbar__title">Seam Express</h1>
   </div>
 
-  <label for="fileUpload"></label>
+  <label for="fileUpload" class="text">Upload Video</label>
   <input type="file" accept="video/*" id="fileUpload">
   <div class="container" id="video-containers">
     <div>
@@ -56,8 +56,8 @@
             </select>
             resolution
           </div>
+          <a href="/uploads/outputvid/output.mp4" download><input type="submit" value='Download'/></a>
         </div>
-<a href="/uploads/outputvid/output.mp4" download><button> Download </button></a>
       </div>
     </div>
   </div>
